--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,4 +9,5 @@ license = "MIT OR Apache-2.0"
 toml = "0.8"
 serde = { version = "1.0", features = ["derive"] }
 clap = { version = "4.4", features = ["derive"] }
+serde_yaml = "0.9"
 
