--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,4 +10,7 @@ toml = "0.8"
 serde = { version = "1.0", features = ["derive"] }
 clap = { version = "4.4", features = ["derive"] }
 serde_yaml = "0.9"
+serde_json = "1.0"
+sha2 = "0.10"
+hex = "0.4"
 
