--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,4 +13,5 @@ serde_yaml = "0.9"
 serde_json = "1.0"
 sha2 = "0.10"
 hex = "0.4"
+postgres = { version = "0.19", features = ["with-serde_json-1"] }
 
