--- a/xtask_plot/Cargo.toml
+++ b/xtask_plot/Cargo.toml
@@ -12,3 +12,6 @@ chrono = "0.4"
 postgres = { version = "0.19", features = ["with-chrono-0_4", "with-serde_json-1"] }
 serde_json = "1.0"
 
+[patch.crates-io]
+# home 0.5.12 requires rustc 1.88 (edition 2024). Pin to a rustc-1.87-compatible version.
+home = "=0.5.11"
